--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
-<body>
+<body bgcolor=lightgray>
+<center><img src=screenshot.png></center>
+<pre>
+<br>
 <ul>
 <li>Play <a href="http://finegamedesign.com/cappiesvscommies/webgl/index.html">Web GL</a>
 <li>Play <a href="http://finegamedesign.com/cappiesvscommies/cappiesvscommies.apk">Android</a>
@@ -18,6 +21,22 @@ Pixel-art 8-bit sound remake of the classic Chinese Game of Go on a 5x5 grid.
 <li>To score, surround the biggest territory.
 <li>To destroy, surround the enemy base.
 <li>More detailed <a href="https://senseis.xmp.net/?BasicRulesOfGo" target=_new>rules of Go.</a>
-<li>TODO: End game and count score. For now you'll have to end and count score yourself.
+<li>There is no AI to the scoring, so if you want the score to be accurate, capture all the dead pieces before ending.
 </ol>
+
+<h3>Credits</h3>
+
+- Art: Toby Hefflin
+- Music: Cole Masaitis
+- Sound Effects: Jason Denney
+- Engineering: Ethan Kennerly
+- Host: GluPlay, creator of Cooking Dash
+- Playtesters: Jerome Byrne, Shine Garg
+
+<h3>Tools</h3>
+
+- Unity 2017.4.10f1
+- Text Mesh Pro
+- <a href="https://github.com/paviad/GoSharp">GoSharp</a> by Aviad Pineles
+</pre>
 </body>
