(Toby) Nuke: Reimports with lit color.

--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 <center><img src=screenshot.png></center>
 <pre>
 <br>
+Ludum Dare 45 (Oct 2019)
+<ul>
+<li>Play <a href="http://finegamedesign.com/cappiesvscommies/ld45/webgl/index.html">Web GL</a>
+<li>Play <a href="http://finegamedesign.com/cappiesvscommies/ld45/cappiesvscommies.apk">Android</a>
+</ul>
+Ludum Dare 43 (Dec 2018)
 <ul>
 <li>Play <a href="http://finegamedesign.com/cappiesvscommies/webgl/index.html">Web GL</a>
 <li>Play <a href="http://finegamedesign.com/cappiesvscommies/cappiesvscommies.apk">Android</a>
