(Toby) BG/Nuke: Revises image. Submits to LD45.

--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
 <body bgcolor=lightgray>
-<center><img src=screenshot.png></center>
 <pre>
+<center><img src=screenshot_ld45.png></center>
 <br>
-Ludum Dare 45 (Oct 2019)
+<br>
+Ludum Dare 45 (Oct 2019) : Custom tile per location; Nuke on capture.
 <ul>
-<li>Play <a href="http://finegamedesign.com/cappiesvscommies/ld45/webgl/index.html">Web GL</a>
+<!--<li>Play <a href="http://finegamedesign.com/cappiesvscommies/ld45/webgl/index.html">Web GL</a>-->
 <li>Play <a href="http://finegamedesign.com/cappiesvscommies/ld45/cappiesvscommies.apk">Android</a>
+<li><a href="https://ldjam.com/events/ludum-dare/45/cappies-vs-commies">Comment</a> on Ludum Dare (Oct 4 - Oct 6, 2019).
 </ul>
-Ludum Dare 43 (Dec 2018)
+<center><img src=screenshot.png></center>
+<br>
+Ludum Dare 43 (Dec 2018) : First version.
 <ul>
 <li>Play <a href="http://finegamedesign.com/cappiesvscommies/webgl/index.html">Web GL</a>
 <li>Play <a href="http://finegamedesign.com/cappiesvscommies/cappiesvscommies.apk">Android</a>
